--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,50 @@
+body {
+	background-color: #ffffff; /*rgb(248, 249, 250);*/
+}
 h1 {
     text-align: center;
-}
-.first-example-grid {
-    background-color: #aaaaaa;
-    border: 3px solid #000000;
+	font-family: "Source Sans Pro", Comic Sans MS;
+	font-weight: bold;
 }
 
-.second-example-grid {
-    background-color: #aaaa00;
-    border: 3px solid #000000;
-}
-/* .row { */
-    /* background-color: #000000; */
-    /* color: #ffffff; */
-/* } */
-
-.col {
-    background-color: #cccccc;
-    color: #000000;
-    padding: 5px;
-    margin: 3px;
-    text-align: center;
+.quote {
+	text-align: center;
+	font-family: "Source Sans Pro", Comic Sans MS;
+	text-shadow: 2px 2px #dddddd;
 }
 
-.second-example-cell {
-    background-color: #cccc00;
-    color: #000000;
-    padding: 5px;
-    margin: 3px;
-    text-align: center;
+.diquotetable {
+	display: table;
+}
+.diquote {
+	text-align: center;
+	font-family: "Source Sans Pro", Comic Sans MS;
+	display: table-cell;
+	vertical-align: middle;
 }
 
-.dropdown:hover .dropdown-menu {
-    display: block;
-    margin-top: 0; // remove the gap so it doesn't close
- }
+.card {
+	height: 100%;
+}
+
+button.btn {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+	background-color: #ffffff;
+}
+
+.section2 {
+	background-color: rgb(248, 249, 250);
+}
+
+.col-sm-4 {
+}
+
+footer {
+	background-color: rgb(248, 249, 250);
+}
+ 
